# OILA-MADAC

./: .gitignore  .gitmodules  IL_SYSTEM_README.md  README.md  README_UHRL.md  conf_system.py  config.py  data_converter.py  data_loader.py  il_runner.py  main.py  merge_csv.py  requirements.txt  rl_runner.py  showcase-collaborative_guidance.acmi  showcase-grinder_tactic.acmi  test.py
ALGORITHM/: mt_mapper.py
ALGORITHM/MADAC-imitation/: TODO.md  net3.py  net4.py  ppo.py  shell_env.py  trajectory.py
ALGORITHM/MADAC-reinforce/: README.md  foundation.py  net.py  net2.py  ppo.py  ppo_sampler.py  trajectory.py
ALGORITHM/MADAC_imitation/: README.md  foundation.py  madac.py  madac_sampler.py  net.py  net2.py  trajectory.py
ALGORITHM/MADAC_reinforce/: foundation.py  madac.py  madac_sampler.py  net.py  ppo.py  shell_env.py  trajectory.py
ALGORITHM/common/: alg_base.py  attention.py  net_manifest.py  rl_alg_base.py  temporal_blocks.py
ALGORITHM/random/: foundation.py
COMMUNICATION/: shm_pool.py
MISSION/: env_router.py  example.jsonc  example.py  imitation_bc_bvr.jsonc  imitation_bc_example.jsonc
MISSION/bvr_sim/: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  __init__.py  action_space.py  build_linux.sh  build_windows.bat  bvr_env.py  bvr_env_cpp.py  env_wrapper.py  observation_space.py  performance.py  spawn_manager.py
MISSION/bvr_sim/agents/: .gitignore  __init__.py  agent.py  bvr_strategist.py  skill_manager.py
MISSION/bvr_sim/agents/api/: api.py  api_router.py
MISSION/bvr_sim/baseline_opponents/: __init__.py  simple_opponents.py  slamraam_policy.py  tactical_opponent.py
MISSION/bvr_sim/conf_system/cpp/: MADAC_imitation-2v2-entity-denseReward.jsonc  MADAC_reinforce-2v2-entity-denseReward.jsonc  ppo_ma-1v1-entity-denseReward.jsonc  ppo_ma-2v2-entity-denseReward-old.jsonc  ppo_ma-2v2-entity-denseReward-纯密集.jsonc  ppo_ma-2v2-entity-denseReward.jsonc
MISSION/bvr_sim/conf_system/cpp/init/: 1v1.jsonc  2v2.jsonc
MISSION/bvr_sim/conf_system/python/: dqn_ma-1v1-extended.jsonc  harl_mappo-1v1-extended.jsonc  ppo_ma-1v1-canvas.jsonc  ppo_ma-1v1-entity-denseReward-test.jsonc  ppo_ma-1v1-entity-denseReward.jsonc  ppo_ma-1v1-entity-noemb.jsonc  ppo_ma-1v1-entity.jsonc  ppo_ma-1v1-extended.jsonc  ppo_ma-1v1-shadow.jsonc  ppo_ma-1v1-test.jsonc  ppo_ma-2v2-entity-denseReward.jsonc  ppo_ma-2v2-extended.jsonc  ppo_ma_gru-1v1-extended-sp.jsonc  random-1v1-test.jsonc
MISSION/bvr_sim/main/: demo_config.json  demo_config_cpp.jsonc  test_cpp.py  test_py.py
MISSION/bvr_sim/reward/: reward_components.py  reward_visualization.py
MISSION/bvr_sim/simulator/: __init__.py  data_obj.py  simulator.py
MISSION/bvr_sim/simulator/aircraft/: base.py  f16.py  recorder.py
MISSION/bvr_sim/simulator/aircraft/fc/: fc.py  fc_nwu.py
MISSION/bvr_sim/simulator/aircraft/fdm/: __init__.py  base.py  catalog.py  jsbsim_fdm.py  simple_fdm.py
MISSION/bvr_sim/simulator/ground/: __init__.py  aa.py  base.py  ground_static_target.py  slamraam.py
MISSION/bvr_sim/simulator/missile/: aim120c.py  aim120c_adv_sim.py  aim120c_lossless.py  aim120c_maddog.py  base.py  jsow.py
MISSION/bvr_sim/simulator/sense/: __init__.py  awacs.py  base.py  canvas.py  lidar.py  radar.py  rws.py  simple_radar.py
MISSION/bvr_sim/src/: CMakeLists.txt  bsl_pool.cxx  bsl_pool.hxx  cmd_handler.cxx  cmd_handler.hxx  core.cxx  core.hxx  global_config.cxx  global_config.hxx  pybind11_bindings.cxx  so_pool.cxx  so_pool.hxx  trace.cxx  trace.hxx
MISSION/bvr_sim/src/baseline_opponents/: base.cxx  base.hxx  mad.cxx  mad.hxx  tactical.cxx  tactical.hxx
MISSION/bvr_sim/src/c3utils/: CMakeLists.txt  c3utils.hxx  def.hxx  funcs.hxx  io.hxx  test_c3utils.cxx  vector.cxx  vector.hxx
MISSION/bvr_sim/src/rl/: action_space.hxx  observation_space.cxx  observation_space.hxx  reward_components.cxx  reward_components.hxx  reward_default_config.json  reward_manager.cxx  reward_manager.hxx  rl_manager.cxx  rl_manager.hxx
MISSION/bvr_sim/src/rubbish_can/: SL.hxx  ST.hxx  check.hxx  colorful.hxx  filter.hxx  json.hpp  json_getter.hxx  rubbish_can.hxx  set_env.cxx  set_env.hxx
MISSION/bvr_sim/src/simulator/: data_obj.cxx  data_obj.hxx  pylon_manager.cxx  pylon_manager.hxx  register.cxx  register.hxx  simulator.cxx  simulator.hxx  unit_factory.cxx  unit_factory.hxx  value.bac.cxx  value.bac.hxx  weapon_factory.cxx  weapon_factory.hxx
MISSION/bvr_sim/src/simulator/aircraft/: base.cxx  base.hxx  fighter.cxx  fighter.hxx
MISSION/bvr_sim/src/simulator/aircraft/fc/: fc_old.bac.py  fc_old.cxx  fc_old.hxx  fc_old.py
MISSION/bvr_sim/src/simulator/aircraft/fdm/: base.cxx  base.hxx  jsbsim_fdm.cxx  jsbsim_fdm.hxx  simple_fdm.cxx  simple_fdm.hxx
MISSION/bvr_sim/src/simulator/aircraft/fdm/jsbsim/aircraft/f16/: f16.xml
MISSION/bvr_sim/src/simulator/ground/: aa.cxx  aa.hxx  base.cxx  base.hxx  ground_static_target.cxx  ground_static_target.hxx  slamraam.cxx  slamraam.hxx
MISSION/bvr_sim/src/simulator/missile/: aim120c.cxx  aim120c.hxx  base.cxx  base.hxx  missile_aerodynamics.cxx  missile_aerodynamics.hxx
MISSION/bvr_sim/src/simulator/sense/: awacs.cxx  awacs.hxx  base.cxx  base.hxx  radar.cxx  radar.hxx  rws.cxx  rws.hxx
